# pkg/api/koroche.pb.go
@@ -132,7 +132,7 @@ type AddURLRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Url *URL `protobuf:"bytes,1,opt,name=url,proto3" json:"url,omitempty"`
+	UserUrl *UserURL `protobuf:"bytes,1,opt,name=user_url,json=userUrl,proto3" json:"user_url,omitempty"`
 }
 
 func (x *AddURLRequest) Reset() {
@@ -167,9 +167,9 @@ func (*AddURLRequest) Descriptor() ([]byte, []int) {
 	return file_koroche_proto_rawDescGZIP(), []int{2}
 }
 
-func (x *AddURLRequest) GetUrl() *URL {
+func (x *AddURLRequest) GetUserUrl() *UserURL {
 	if x != nil {
-		return x.Url
+		return x.UserUrl
 	}
 	return nil
 }
@@ -234,7 +234,7 @@ type GetURLRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Url *URL `protobuf:"bytes,1,opt,name=url,proto3" json:"url,omitempty"`
+	Url *ShortURL `protobuf:"bytes,1,opt,name=url,proto3" json:"url,omitempty"`
 }
 
 func (x *GetURLRequest) Reset() {
@@ -269,7 +269,7 @@ func (*GetURLRequest) Descriptor() ([]byte, []int) {
 	return file_koroche_proto_rawDescGZIP(), []int{4}
 }
 
-func (x *GetURLRequest) GetUrl() *URL {
+func (x *GetURLRequest) GetUrl() *ShortURL {
 	if x != nil {
 		return x.Url
 	}
@@ -281,8 +281,8 @@ type GetURLResponse struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	ShortUrl *ShortURL `protobuf:"bytes,1,opt,name=short_url,json=shortUrl,proto3" json:"short_url,omitempty"`
-	Error    *Error    `protobuf:"bytes,2,opt,name=error,proto3" json:"error,omitempty"`
+	UserUrl *UserURL `protobuf:"bytes,1,opt,name=user_url,json=userUrl,proto3" json:"user_url,omitempty"`
+	Error   *Error   `protobuf:"bytes,2,opt,name=error,proto3" json:"error,omitempty"`
 }
 
 func (x *GetURLResponse) Reset() {
@@ -317,9 +317,9 @@ func (*GetURLResponse) Descriptor() ([]byte, []int) {
 	return file_koroche_proto_rawDescGZIP(), []int{5}
 }
 
-func (x *GetURLResponse) GetShortUrl() *ShortURL {
+func (x *GetURLResponse) GetUserUrl() *UserURL {
 	if x != nil {
-		return x.ShortUrl
+		return x.UserUrl
 	}
 	return nil
 }
@@ -378,7 +378,7 @@ func (x *ShortURL) GetValue() string {
 	return ""
 }
 
-type URL struct {
+type UserURL struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
@@ -386,8 +386,8 @@ type URL struct {
 	Value string `protobuf:"bytes,1,opt,name=value,proto3" json:"value,omitempty"`
 }
 
-func (x *URL) Reset() {
-	*x = URL{}
+func (x *UserURL) Reset() {
+	*x = UserURL{}
 	if protoimpl.UnsafeEnabled {
 		mi := &file_koroche_proto_msgTypes[7]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -395,13 +395,13 @@ func (x *URL) Reset() {
 	}
 }
 
-func (x *URL) String() string {
+func (x *UserURL) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*URL) ProtoMessage() {}
+func (*UserURL) ProtoMessage() {}
 
-func (x *URL) ProtoReflect() protoreflect.Message {
+func (x *UserURL) ProtoReflect() protoreflect.Message {
 	mi := &file_koroche_proto_msgTypes[7]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -413,12 +413,12 @@ func (x *URL) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use URL.ProtoReflect.Descriptor instead.
-func (*URL) Descriptor() ([]byte, []int) {
+// Deprecated: Use UserURL.ProtoReflect.Descriptor instead.
+func (*UserURL) Descriptor() ([]byte, []int) {
 	return file_koroche_proto_rawDescGZIP(), []int{7}
 }
 
-func (x *URL) GetValue() string {
+func (x *UserURL) GetValue() string {
 	if x != nil {
 		return x.Value
 	}
@@ -484,49 +484,50 @@ var file_koroche_proto_rawDesc = []byte{
 	0x69, 0x6e, 0x67, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x63,
 	0x6f, 0x64, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x03, 0x52, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x12,
 	0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05,
-	0x76, 0x61, 0x6c, 0x75, 0x65, 0x22, 0x2f, 0x0a, 0x0d, 0x41, 0x64, 0x64, 0x55, 0x52, 0x4c, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1e, 0x0a, 0x03, 0x75, 0x72, 0x6c, 0x18, 0x01, 0x20,
-	0x01, 0x28, 0x0b, 0x32, 0x0c, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x55, 0x52,
-	0x4c, 0x52, 0x03, 0x75, 0x72, 0x6c, 0x22, 0x66, 0x0a, 0x0e, 0x41, 0x64, 0x64, 0x55, 0x52, 0x4c,
-	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2e, 0x0a, 0x09, 0x73, 0x68, 0x6f, 0x72,
-	0x74, 0x5f, 0x75, 0x72, 0x6c, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x11, 0x2e, 0x6b, 0x6f,
-	0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x53, 0x68, 0x6f, 0x72, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x08,
-	0x73, 0x68, 0x6f, 0x72, 0x74, 0x55, 0x72, 0x6c, 0x12, 0x24, 0x0a, 0x05, 0x65, 0x72, 0x72, 0x6f,
-	0x72, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0e, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68,
-	0x65, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x52, 0x05, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x22, 0x2f,
-	0x0a, 0x0d, 0x47, 0x65, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12,
-	0x1e, 0x0a, 0x03, 0x75, 0x72, 0x6c, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0c, 0x2e, 0x6b,
-	0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x55, 0x52, 0x4c, 0x52, 0x03, 0x75, 0x72, 0x6c, 0x22,
-	0x66, 0x0a, 0x0e, 0x47, 0x65, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
-	0x65, 0x12, 0x2e, 0x0a, 0x09, 0x73, 0x68, 0x6f, 0x72, 0x74, 0x5f, 0x75, 0x72, 0x6c, 0x18, 0x01,
-	0x20, 0x01, 0x28, 0x0b, 0x32, 0x11, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x53,
-	0x68, 0x6f, 0x72, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x08, 0x73, 0x68, 0x6f, 0x72, 0x74, 0x55, 0x72,
-	0x6c, 0x12, 0x24, 0x0a, 0x05, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b,
-	0x32, 0x0e, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72,
-	0x52, 0x05, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x22, 0x20, 0x0a, 0x08, 0x53, 0x68, 0x6f, 0x72, 0x74,
+	0x76, 0x61, 0x6c, 0x75, 0x65, 0x22, 0x3c, 0x0a, 0x0d, 0x41, 0x64, 0x64, 0x55, 0x52, 0x4c, 0x52,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x2b, 0x0a, 0x08, 0x75, 0x73, 0x65, 0x72, 0x5f, 0x75,
+	0x72, 0x6c, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x10, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63,
+	0x68, 0x65, 0x2e, 0x55, 0x73, 0x65, 0x72, 0x55, 0x52, 0x4c, 0x52, 0x07, 0x75, 0x73, 0x65, 0x72,
+	0x55, 0x72, 0x6c, 0x22, 0x66, 0x0a, 0x0e, 0x41, 0x64, 0x64, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x73,
+	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2e, 0x0a, 0x09, 0x73, 0x68, 0x6f, 0x72, 0x74, 0x5f, 0x75,
+	0x72, 0x6c, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x11, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63,
+	0x68, 0x65, 0x2e, 0x53, 0x68, 0x6f, 0x72, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x08, 0x73, 0x68, 0x6f,
+	0x72, 0x74, 0x55, 0x72, 0x6c, 0x12, 0x24, 0x0a, 0x05, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x18, 0x02,
+	0x20, 0x01, 0x28, 0x0b, 0x32, 0x0e, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x45,
+	0x72, 0x72, 0x6f, 0x72, 0x52, 0x05, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x22, 0x34, 0x0a, 0x0d, 0x47,
+	0x65, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x23, 0x0a, 0x03,
+	0x75, 0x72, 0x6c, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x11, 0x2e, 0x6b, 0x6f, 0x72, 0x6f,
+	0x63, 0x68, 0x65, 0x2e, 0x53, 0x68, 0x6f, 0x72, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x03, 0x75, 0x72,
+	0x6c, 0x22, 0x63, 0x0a, 0x0e, 0x47, 0x65, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x73, 0x70, 0x6f,
+	0x6e, 0x73, 0x65, 0x12, 0x2b, 0x0a, 0x08, 0x75, 0x73, 0x65, 0x72, 0x5f, 0x75, 0x72, 0x6c, 0x18,
+	0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x10, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e,
+	0x55, 0x73, 0x65, 0x72, 0x55, 0x52, 0x4c, 0x52, 0x07, 0x75, 0x73, 0x65, 0x72, 0x55, 0x72, 0x6c,
+	0x12, 0x24, 0x0a, 0x05, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b, 0x32,
+	0x0e, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x52,
+	0x05, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x22, 0x20, 0x0a, 0x08, 0x53, 0x68, 0x6f, 0x72, 0x74, 0x55,
+	0x52, 0x4c, 0x12, 0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28,
+	0x09, 0x52, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x22, 0x1f, 0x0a, 0x07, 0x55, 0x73, 0x65, 0x72,
 	0x55, 0x52, 0x4c, 0x12, 0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x01, 0x20, 0x01,
-	0x28, 0x09, 0x52, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x22, 0x1b, 0x0a, 0x03, 0x55, 0x52, 0x4c,
-	0x12, 0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52,
-	0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x22, 0x1d, 0x0a, 0x05, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x12,
-	0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05,
-	0x76, 0x61, 0x6c, 0x75, 0x65, 0x32, 0xf9, 0x01, 0x0a, 0x07, 0x4b, 0x6f, 0x72, 0x6f, 0x63, 0x68,
-	0x65, 0x12, 0x48, 0x0a, 0x04, 0x50, 0x69, 0x6e, 0x67, 0x12, 0x14, 0x2e, 0x6b, 0x6f, 0x72, 0x6f,
-	0x63, 0x68, 0x65, 0x2e, 0x50, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x15, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x50, 0x69, 0x6e, 0x67, 0x52, 0x65,
-	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x13, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x22, 0x08,
-	0x2f, 0x76, 0x31, 0x2f, 0x70, 0x69, 0x6e, 0x67, 0x3a, 0x01, 0x2a, 0x12, 0x51, 0x0a, 0x06, 0x41,
-	0x64, 0x64, 0x55, 0x52, 0x4c, 0x12, 0x16, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e,
-	0x41, 0x64, 0x64, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x17, 0x2e,
-	0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x41, 0x64, 0x64, 0x55, 0x52, 0x4c, 0x52, 0x65,
-	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x10, 0x22, 0x0b,
-	0x2f, 0x76, 0x31, 0x2f, 0x75, 0x72, 0x6c, 0x2f, 0x61, 0x64, 0x64, 0x3a, 0x01, 0x2a, 0x12, 0x51,
-	0x0a, 0x06, 0x47, 0x65, 0x74, 0x55, 0x52, 0x4c, 0x12, 0x16, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63,
-	0x68, 0x65, 0x2e, 0x47, 0x65, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
-	0x1a, 0x17, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x47, 0x65, 0x74, 0x55, 0x52,
+	0x28, 0x09, 0x52, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x22, 0x1d, 0x0a, 0x05, 0x45, 0x72, 0x72,
+	0x6f, 0x72, 0x12, 0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28,
+	0x09, 0x52, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x32, 0xf9, 0x01, 0x0a, 0x07, 0x4b, 0x6f, 0x72,
+	0x6f, 0x63, 0x68, 0x65, 0x12, 0x48, 0x0a, 0x04, 0x50, 0x69, 0x6e, 0x67, 0x12, 0x14, 0x2e, 0x6b,
+	0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x50, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x71, 0x75, 0x65,
+	0x73, 0x74, 0x1a, 0x15, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x50, 0x69, 0x6e,
+	0x67, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x13, 0x82, 0xd3, 0xe4, 0x93, 0x02,
+	0x0d, 0x22, 0x08, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x69, 0x6e, 0x67, 0x3a, 0x01, 0x2a, 0x12, 0x51,
+	0x0a, 0x06, 0x41, 0x64, 0x64, 0x55, 0x52, 0x4c, 0x12, 0x16, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63,
+	0x68, 0x65, 0x2e, 0x41, 0x64, 0x64, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x1a, 0x17, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x41, 0x64, 0x64, 0x55, 0x52,
 	0x4c, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02,
-	0x10, 0x22, 0x0b, 0x2f, 0x76, 0x31, 0x2f, 0x75, 0x72, 0x6c, 0x2f, 0x67, 0x65, 0x74, 0x3a, 0x01,
-	0x2a, 0x42, 0x09, 0x5a, 0x07, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x33,
+	0x10, 0x22, 0x0b, 0x2f, 0x76, 0x31, 0x2f, 0x75, 0x72, 0x6c, 0x2f, 0x61, 0x64, 0x64, 0x3a, 0x01,
+	0x2a, 0x12, 0x51, 0x0a, 0x06, 0x47, 0x65, 0x74, 0x55, 0x52, 0x4c, 0x12, 0x16, 0x2e, 0x6b, 0x6f,
+	0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x47, 0x65, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x1a, 0x17, 0x2e, 0x6b, 0x6f, 0x72, 0x6f, 0x63, 0x68, 0x65, 0x2e, 0x47, 0x65,
+	0x74, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x16, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x10, 0x22, 0x0b, 0x2f, 0x76, 0x31, 0x2f, 0x75, 0x72, 0x6c, 0x2f, 0x67, 0x65,
+	0x74, 0x3a, 0x01, 0x2a, 0x42, 0x09, 0x5a, 0x07, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -550,15 +551,15 @@ var file_koroche_proto_goTypes = []interface{}{
 	(*GetURLRequest)(nil),  // 4: koroche.GetURLRequest
 	(*GetURLResponse)(nil), // 5: koroche.GetURLResponse
 	(*ShortURL)(nil),       // 6: koroche.ShortURL
-	(*URL)(nil),            // 7: koroche.URL
+	(*UserURL)(nil),        // 7: koroche.UserURL
 	(*Error)(nil),          // 8: koroche.Error
 }
 var file_koroche_proto_depIdxs = []int32{
-	7, // 0: koroche.AddURLRequest.url:type_name -> koroche.URL
+	7, // 0: koroche.AddURLRequest.user_url:type_name -> koroche.UserURL
 	6, // 1: koroche.AddURLResponse.short_url:type_name -> koroche.ShortURL
 	8, // 2: koroche.AddURLResponse.error:type_name -> koroche.Error
-	7, // 3: koroche.GetURLRequest.url:type_name -> koroche.URL
-	6, // 4: koroche.GetURLResponse.short_url:type_name -> koroche.ShortURL
+	6, // 3: koroche.GetURLRequest.url:type_name -> koroche.ShortURL
+	7, // 4: koroche.GetURLResponse.user_url:type_name -> koroche.UserURL
 	8, // 5: koroche.GetURLResponse.error:type_name -> koroche.Error
 	0, // 6: koroche.Koroche.Ping:input_type -> koroche.PingRequest
 	2, // 7: koroche.Koroche.AddURL:input_type -> koroche.AddURLRequest
@@ -664,7 +665,7 @@ func file_koroche_proto_init() {
 			}
 		}
 		file_koroche_proto_msgTypes[7].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*URL); i {
+			switch v := v.(*UserURL); i {
 			case 0:
 				return &v.state
 			case 1:
